--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -47,3 +47,29 @@ item > .b {
 	font-family : 'Lato';
 	font-size : 15px
 }
+
+.main_menu {
+	height : 600px;
+	background-image : url("../images/start_menu.jpg");
+}
+
+.main_menu > h1, h2 {
+	padding : 1rem;
+	font-family : 'Lato';
+	text-align : center;
+}
+
+.main_menu > h1 {
+	color : green;
+}
+
+.main_menu > h2 {
+	color : white;
+}
+
+
+.pusher {
+  display: block;
+  min-height: 30px;
+  flex-direction: column;
+}
