--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -7,7 +7,7 @@
 @font-face {
   font-family: 'Lato';
   src:
-    url(/fonts/Lato-Regular.woff2) format('woff2')
+    url(../fonts/Lato-Regular.woff2) format('woff2')
   ;
   font-style: normal;
   font-weight: normal;
@@ -15,7 +15,7 @@
 @font-face {
   font-family: 'Lato';
   src:
-    url(/fonts/Lato-Italic.woff2) format('woff2')
+    url(../fonts/Lato-Italic.woff2) format('woff2')
   ;
   font-style: italic;
   font-weight: normal;
@@ -25,7 +25,7 @@
 @font-face {
   font-family: 'Lato';
   src:
-    url(/fonts/Lato-Bold.woff2) format('woff2')
+    url(../fonts/Lato-Bold.woff2) format('woff2')
   ;
   font-style: normal;
   font-weight: 700;
@@ -33,7 +33,7 @@
 @font-face {
   font-family: 'Lato';
   src:
-    url(/fonts/Lato-BoldItalic.woff2) format('woff2')
+    url(../fonts/Lato-BoldItalic.woff2) format('woff2')
   ;
   font-style: italic;
   font-weight: 700;
@@ -72,4 +72,14 @@ item > .b {
   display: block;
   min-height: 30px;
   flex-direction: column;
+}
+
+.paragraph {
+	border-width: 10px 0px 10px 0px;
+	border-color: black;
+}
+
+.explation_body {
+	color : white;
+	background-image :  url("../images/background_image.jpg");
 }
