--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -50,7 +50,7 @@ item > .b {
 
 .main_menu {
 	height : 600px;
-	background-image : url("../images/start_menu.jpg");
+	background-image : url("../images/gomduri.png");
 }
 
 .main_menu > h1, h2 {
